2011-09-28 Magnus Hagdorn
 * PyGC/progs/cf2GC: need to flip coordinates before computing lon/lats
   if necessary

2011-09-27 Magnus Hagdorn
 * PyGC/progs/cf2GC: fix bug computing x0,y0. flip coordinate axes if
   necessary

2011-09-26 Magnus Hagdorn
 * PyGC/PyGC/IO/GC_netcdf.py: move netCDF module selection to its own file
 * PyGC/PyGC/IO/GC_proj.py: add method to store CF mapping variable
 * PyGC/PyGC/IO/Makefile.am: add new file
 * PyGC/PyGC/IO/__init__.py: load various modules
 * PyGC/PyGC/IO/netcdf.py: find a suitable netCDF module
 * PyGC/progs/Makefile.am: add new program
 * PyGC/progs/cf2GC: new program to convert a CF compliant file into a GC input
   file. Currently, the data has to be projected to a suitable geographic
   coord system

2011-06-01 Magnus Hagdorn
 * PyGC/PyGC/IO/GC_loadfile.py: fix index ordering

2011-05-31 Magnus Hagdorn
 * PyGC/progs/plotGCProfile: add option to limit the yrange
 * extensions/erosion/scripts/plotGCSedsProfile: ditto

2011-05-24 Magnus Hagdorn
 * doc/Makefile.am: remake docs if any tex or eps file has changed

2011-03-16 Magnus Hagdorn
 * libglimmer/glimmer_searchcircle.F90: simplify search circle computations

2011-03-07 Magnus Hagdorn
 * example-drivers/eis/Makefile.am: decent into test directories for various
   test run related rules
 * extensions/erosion/src/Makefile.am: make sure erosion lib is static only

2011-03-04 Magnus Hagdorn
 * tests/EISMINT/EISMINT-1/*.config: add output file with 1000a output freq
 * tests/EISMINT/EISMINT-2/*.config: ditto

2011-02-09 Magnus Hagdorn
 * PyGC/PyGC/GC_options.py: make var method public
 * PyGC/progs/Makefile.am: add new program
 * PyGC/progs/compareGCvar: new program to display difference in a variable
   between two files
 
2011-01-12 Magnus Hagdorn
 * Makefile.am: remove gold standard distribution directory once tar-balled
 * configure.in: make sure path to gold standard is absolute
 * extra_rules.am: report missing files; make sure data to be compared has been