@@ -1,3 +1,6 @@
+2011-10-04 Magnus Hagdorn
+ * PyGC/PyGC/IO/GC_profile.py: deal with litho temperature profiles
+
 2011-09-28 Magnus Hagdorn
  * PyGC/progs/cf2GC: need to flip coordinates before computing lon/lats
    if necessary
